# GAT-GWM

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
src/: main.rs
src/res/: icons.rc
